Changes for 3.2.8rc1

New features:
........S. [ZBX-12258] added bulk selections to improve performance in processing of escalations (Sergejs)

Bug fixes:
..F.I...S. [ZBX-12434] fixed housekeeping of problems and events for deleted items and triggers; added optional database patch to cleanup problems for deleted items and triggers (vso)
..F....... [ZBX-12646] fixed incorrect SQL query in availability reports (Sasha)
..F....... [ZBX-12545] fixed undefined index error on latest data page when host was deleted in another session (gcalenko)
..F....... [ZBX-12321] fixed removal of multiselect options using backspace button (miks)
..F....... [ZBX-12416] optimized data selection of user preferences stored in profiles (gcalenko)
..F....... [ZBX-11607] fixed a rounding of large unsigned numbers (miks)
..F....... [ZBX-12404] fixed visibility of item data first row for 'latest data' page and 'audit log' page (gcalenko)
..F....... [ZBX-12463] fixed undefined index error in "Last 20 issues" (Sasha)
........S. [ZBX-12186] fixed parallel processing of multiple values for same lld rule (vjaceslavs)
..F....... [ZBX-11887] fixed improper DB::refreshIds() call when selected row is locked (miks)
..F....... [ZBX-12022] fixed trigger resolving in services configuration; fixed popup window size (miks)
..F....... [ZBX-12429] fixed template replacement in mass update form (gcalenko)
..F....... [ZBX-12396] fixed an error in screens if screen trigger overview element contains deleted host group (miks)
..F....... [ZBX-12439] fixed macro name field length in host configuration form (gcalenko)
...G...PS. [ZBX-10820] fixed potential loss of data when server/proxy processes zabbix_sender data (Andris)
........S. [ZBX-12446] fixed discovery and auto registration to accept empty DNS names (vso)
........S. [ZBX-12295] fixed possible accumulation of executed tasks in database (Sergejs)
........S. [ZBX-12318] fixed maintenance status not being updated in cache if host is disabled (vso)